# cder

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
src/: database_seeder.rs  lib.rs  reader.rs  resolver.rs  struct_loader.rs
tests/: database_seeder.rs  database_seeder_async.rs  struct_loader.rs
tests/fixtures/: customers.yml  items.yml  orders.yml
tests/test_utils/: mock_database.rs  mod.rs  types.rs
