[package]
name = "cder"
version = "0.1.0"
edition = "2021"
publish = false
description = "seed generator that helps create and persist any struct-typed instances based on serde-compatible files"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
regex = "1.7"
once_cell = "1.16"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.23", features = ["time", "rt-multi-thread", "macros"] }
