[package]
name = "cder"
version = "0.2.1"
edition = "2021"
description = "database seed generator that helps create and persist struct-typed instances based on serde-compatible yaml files"
keywords = ["seed", "seeding", "fixture", "database", "yaml"]
categories = ["development-tools"]
repository = "https://github.com/estie-inc/cder"
authors = ["Koji <fursich0@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.16"
regex = "1.7"
once_cell = "1.16"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "=1.38.1", features = [
    "time",
    "rt-multi-thread",
    "macros",
] }
